# solxpass

./: README.md  drizzle.config.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/connect/: page.tsx
app/dashboard/: page.tsx
app/explore/: page.tsx
app/feeds/: page.tsx
app/nft/: page.tsx
app/test/: page.tsx
blockchain/: Anchor.toml  package-lock.json
blockchain/programs/reclaim/: Cargo.toml
blockchain/programs/reclaim/src/: lib.rs
blockchain/programs/reclaim/test/: test.rs
blockchain/tests/: reclaim.js
components/3D/: Bangbo.jsx  Cat.jsx  Goddess.jsx  Main.tsx  Main2.tsx  Main3.tsx  Marquee.tsx  Marquee2.tsx  Marquee3.tsx  Mickey.jsx  Overwatch.jsx  Scene.tsx  Scene2.tsx  Scene3.tsx  Scene4.tsx  Shirikami.jsx
components/Auth/: SignIn.tsx
components/Dashboard/: AvatarCard.tsx  Chart.tsx  Dash.tsx  FlipCard.tsx  PriceFeed.tsx  Progress.tsx  ProviderCard.tsx
components/Data/: Provider.json  Tier.json
components/Explore/: Connect.tsx  ExplorePage.tsx  IdentityProvider.tsx  Sidbar.tsx
components/Feeds/: PageFeed.tsx
components/Nav/: NavProvider.tsx  Navbar.tsx  PhantomWalletContext.tsx  SessionProvider.tsx  WalletAdapter.tsx  WalletButton.tsx  WalletContext.tsx
components/Reclaim/: VerifyProof.jsx
components/ui/: Card.tsx
config/: base.ts  idl.js  idl.ts  utils.ts
lib/: Metaplex.tsx  NftFilter.ts  NftMintClass.ts  OldMint.ts  TierCalculator.ts  test.js
prisma/: schema.prisma
public/: Mickey.glb  Shirikami.glb  cat.glb  robot.glb  sploot.glb
(+8 files in other folders)
